objects/vlocity_cmt__PriceList__c.object
<CustomObject>
    <description>A price list represents the pricing for the products and services that your company offers. A base price list defines the baseline pricing for your products and services. A child price list inherits all the pricing from the base price list and contains exceptions to the baseline pricing.</description>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Price List. Used to identify the price list across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique price list identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentPriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Child Price Lists</relationshipLabel>
        <relationshipName>ChildPriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Price Lists</relationshipLabel>
        <relationshipName>PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Price List</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Price List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>